--- a/src/app/dashboard/sidebar/sidebar.component.html
+++ b/src/app/dashboard/sidebar/sidebar.component.html
@@ -1,6 +1,9 @@
 <ul class="nav nav-pills flex-column">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
+    <a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" [routerLink]="['/login']">Login</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Reports</a>
